test/expected/explain_uwt.out
explain unsigned wchar_t x
                 ^
18: error: "unsigned wchar_t" is illegal for built-in type
